[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/OpenDyslexic-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/level/LevelComplete.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[node name="LevelComplete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Level # cleared"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_left = 288.0
margin_top = 400.0
margin_right = 328.0
margin_bottom = 424.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Buttons"]
margin_left = -232.0
margin_top = -176.0
margin_right = 280.0
margin_bottom = -60.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Next Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Button" parent="Buttons"]
margin_left = -272.0
margin_top = 136.0
margin_right = 240.0
margin_bottom = 252.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Character"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Buttons"]
margin_left = -248.0
margin_top = -64.0
margin_right = 264.0
margin_bottom = 52.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="Buttons"]
margin_left = -232.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 148.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewPoints" type="Label" parent="."]
margin_left = 704.0
margin_top = 256.0
margin_right = 1211.0
margin_bottom = 389.0
custom_fonts/font = SubResource( 3 )
text = "# Points added
See Characer menu"

[node name="Time" type="Label" parent="."]
margin_left = 592.0
margin_top = 456.0
margin_right = 1219.0
margin_bottom = 633.0
custom_fonts/font = SubResource( 4 )
text = "Level cleared in
##m:##s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="Buttons/Menu" to="." method="_on_menu_pressed"]
